@@ -1,3 +1,6 @@
+[B]Version 0.1.6[/B]
+- Forgot to add addon Id in initialization. Stupid mistake fixed.
+
 [B]Version 0.1.5[/B]
 - Added new turtle lib dependency.
 
